- CSS: fixed float-wrapping issues for rows - Added ability to perform arbitrary matrix transforms to patterns - Add ability to decorate row elements - Pause/step input no longer configurable -

--- a/css/sample.css
+++ b/css/sample.css
@@ -3,28 +3,31 @@
   margin: 0;
   border: 0;
   padding: 0;
+
+  /* clearfix hack */
+  float: left;
+  clear: both;
 }
 
 #life > .row > .cell {
-  display: inline-block;
+  float: left;
   position: relative;
 
-  margin: 0px;
-  border-collapse: collapse;
-  border-width: 5px;
-  border-style: solid;
+  margin: 4px 4px 0 0;
   padding: 0px;
 
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
 
   background-color: black;
 }
 
 #life > .row > .cell > .interior {
-  margin: 17px 0 0 17px;
-  height: 16px;
-  width:16px;
+  margin: 15px 0 0 15px;
+  border: 0;
+  padding: 0;
+  height: 10px;
+  width:10px;
 }
 
 /* state-based coloring */
